tests/endtoend/failure/expected/error_for2.compile.out
error_for2.silly:6:7: error: Undeclared variable j
    6 | PRINT j;
      |       ^
